# ChatServer

./: CMakeLists.txt  README.md  autobuild.sh  chat.sql
include/server/: chatserver.hpp  chatservice.hpp  public.hpp
include/server/db/: CommonConnectionPool.h  db.h
include/server/entity/: group.hpp  groupuser.hpp  user.hpp
include/server/model/: friendmodel.hpp  groupmodel.hpp  offlinemessagemodel.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: CommonConnectionPool.cpp  db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
